# emma-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  cert.pem  dev-cert.pem  dev-key.pem  key.pem
docs/: installation.md
password_encoder/: Cargo.toml
password_encoder/src/: lib.rs
src/: main.rs
src/auth/: mod.rs
src/auth/password_encoder/: mod.rs
src/auth/token_extractor/: mod.rs
src/auth/token_to_user_id/: mod.rs
src/auth/utils/: verify_token.rs
src/helpers/: mod.rs
src/helpers/add_account_to_pools/: mod.rs
src/helpers/base64_to_webp/: mod.rs
src/helpers/generate_random_password/: mod.rs
src/helpers/get_account_psql_link/: mod.rs
src/helpers/init_account_connection/: mod.rs
src/helpers/init_all_account_connections/: mod.rs
src/helpers/install_extensions/: mod.rs
src/helpers/modify_types/: mod.rs
src/helpers/pool_wrapper/: mod.rs
src/helpers/start_pool_cleanup_task/: mod.rs
src/helpers/target_pool/: mod.rs
src/helpers/to_snake_case/: mod.rs
src/init/: attach_embed_data_checker.rs  create_accounts_table.rs  create_extensions.rs  mod.rs  preload_model.rs  update_embed_data.rs
src/init_pgai/: create_table.rs  mod.rs  preload_model.rs
src/middleware/: jwt_validator.rs
src/models/: mod.rs
src/models/account_models/: mod.rs
src/models/auth_models/: mod.rs
src/models/generation_models/: mod.rs
src/models/pools_models/: mod.rs
src/models/products_models/: mod.rs  shopify_products.rs
src/models/store_models/: mod.rs
src/routes/: mod.rs
src/routes/add_products_to_store/: mod.rs
src/routes/create_account/: ensure_store_auth_table.rs  mod.rs
src/routes/create_store/: mod.rs  upload_csv_to_database.rs  upload_shopify_to_database.rs
src/routes/delete_store/: mod.rs
src/routes/embed_table/: mod.rs
src/routes/generate_gemma/: add_products_suggestion.rs  mod.rs  parse_response.rs  unused_generate_response.rs
src/routes/generate_text_embedding/: mod.rs
src/routes/generation_demo/: add_products_suggestion.rs  mod.rs  parse_response.rs
src/routes/get_prodected_data/: mod.rs
src/routes/get_store_products/: mod.rs
src/routes/get_stores/: mod.rs
src/routes/health_check/: mod.rs
src/routes/login_account/: mod.rs
src/routes/logout_account/: mod.rs
src/routes/me/: mod.rs
src/routes/refresh_token/: mod.rs
src/routes/setup_store_database/: create_store_tables.rs  ensure_store_auth_table.rs  mod.rs
src/routes/shopify_generate_embeddings/: mod.rs
src/routes/update_products/: add_products_to_store.rs  build_shopify_query.rs  mod.rs  parse_shopify_products.rs
src/routes/update_store_sys_prompt/: mod.rs
