[package]
name = "makeup_face_scan"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
error = "0.1.9"
features = "0.10.0"
futures = "0.3.31"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = "1.16.0"
actix-web = "4.11.0"
reqwest = { version = "^0.11", features = ["blocking", "json"]}
base64 = "0.22.1"
image = "0.25.6"
backoff = { version = "0.4", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
