[package]
name = "makeup_face_scan"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "^0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }
error = "0.1.9"
features = "0.10.0"
futures = "0.3.31"
validator = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = {version = "1.16.0", features = ["v4", "serde"]}
actix-web = "4.11.0"
reqwest = { version = "0.12.18", features = ["blocking", "json"]}
base64 = "0.22.1"
image = "0.25.6"
backoff = { version = "0.4", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
rand = "0.9.1"
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.9.3", features = ["std"] }
oauth = "0.0.1"
jsonwebtoken = "9.3.1"
actix-web-httpauth = "0.8.2"
rust_decimal = "1.37.1"
aes-gcm = "0.10.3"
